Fixes spacing between address items in Profile Widget: Address

--- a/css/widgets-profile.less
+++ b/css/widgets-profile.less
@@ -70,7 +70,6 @@
 			display: inline-block;
 			&:after {
 				content: ",";
-				margin-left: -0.3em;
 				display: inline-block;
 			}
 			&:last-of-type:after {
